--- a/index.html
+++ b/index.html
@@ -134,18 +134,14 @@
             </ol>
         </div>
 
-        <div class="widget-placeholder">
-            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px;">
-                <div>
-                    <span style="display:block; font-size:12px; color:#8b949e;">Tú entregas:</span>
-                    <strong style="font-size:18px;">USDT / USDC</strong>
-                </div>
-                <div style="font-size: 20px;">➡️</div>
-                <div>
-                    <span style="display:block; font-size:12px; color:#8b949e;">Recibes:</span>
-                    <strong style="font-size:18px; color: #ffcc00;">QUBIC</strong>
-                </div>
-            </div>
+        <div class="widget-placeholder" style="padding: 0; overflow: hidden;">
+            <iframe 
+                id="iframe-widget" 
+                src="https://changenow.io/embeds/exchange-widget/v2/widget.html?FAQ=true&amount=50&amountFiat=1500&backgroundColor=0d1117&darkMode=true&from=usdttrc20&fromFiat=usd&horizontal=false&isFiat=false&lang=es-ES&link_id=402484&locales=true&logo=false&primaryColor=58A6FF&to=qubic&toFiat=qubic&toTheMoon=true" 
+                style="height: 356px; width: 100%; border: none;">
+            </iframe>
+        </div>
+        <p><small style="color: #8b949e;">*Transacción directa en Blockchain. Sin custodia.</small></p>
             
             <button class="btn-jugar" style="background-color: #1f6feb;">CONVERTIR AHORA</button>
             <p><small>Powered by ChangeNow / SimpleSwap</small></p>
